--- a/ruoyi-admin/src/main/resources/application.yml
+++ b/ruoyi-admin/src/main/resources/application.yml
@@ -16,6 +16,8 @@ ruoyi:
   captchaType: math
   #没有数据库，通过配置文件读写数据
   noDatabaseEnabled: true
+  #是否开启ehCache缓存
+  ehCacheEnabled: true
 # 开发环境配置
 server:
   # 服务器的HTTP端口，默认为8080
@@ -63,6 +65,10 @@ spring:
        max-file-size:  10MB
        # 设置总上传的文件大小
        max-request-size:  20MB
+  cache:
+    type: ehcache
+    ehcache:
+      config: classpath:/ehcache.xml
   # 服务模块
   devtools:
     restart:
@@ -71,7 +77,7 @@ spring:
   # redis 配置
   redis:
     # 地址
-    host: 121.5.137.230
+    host: localhost
     # 端口，默认为6379
     port: 6379
     # 数据库索引
