1.ehCache增加验证码缓存,令牌缓存,重复提交缓存,登录账户密码错误次数缓存 用于配置特定的缓存失效时间  2.更新清空参数缓存clearConfigCache()和获取在线用户信息getTokenCacheKeys(),因为ehCache不支持通配符*获取缓存key值，增加获取key的方法  3.更新初始化字典缓存loadingDictCache()和初始化参数缓存loadingConfigCache()  4.获取字典缓存getDictCache()类型转换抛错bug修改

--- a/ruoyi-admin/src/main/resources/application.yml
+++ b/ruoyi-admin/src/main/resources/application.yml
@@ -47,7 +47,7 @@ user:
   password:
     # 密码最大错误次数
     maxRetryCount: 5
-    # 密码锁定时间（默认10分钟）
+    # 密码锁定时间（默认10分钟,若修改需要更新ehCache.xml的pwdErrCntCache过期时间）
     lockTime: 10
 
 # Spring配置
@@ -106,7 +106,7 @@ token:
     header: Authorization
     # 令牌密钥
     secret: abcdefghijklmnopqrstuvwxyz
-    # 令牌有效期（默认30分钟）
+    # 令牌有效期（默认30分钟）若修改需要更新ehCache.xml的tokenCache过期时间
     expireTime: 30
   
 # MyBatis配置
